send for approve - rules

--- a/findly-builder/src/app/components/results-rules/rules-table/rules-table.component.html
+++ b/findly-builder/src/app/components/results-rules/rules-table/rules-table.component.html
@@ -37,7 +37,8 @@
       </perfect-scrollbar>
       </ng-container>
       <div class="footer-btns" *ngIf="rulesService.showReviewFooter">
-        <button class="kr-sg-button-primary btn_lg" (click)='rulesService.bulkSend.next()'>Send for Review</button>
+        <button class="kr-sg-button-primary btn_lg" *ngIf="tabActive == 'draft' || tabActive == 'approved'" (click)='rulesService.bulkSend.next("in-review")'>Send for Review</button>
+        <button class="kr-sg-button-primary btn_lg" *ngIf="tabActive == 'in-review'" (click)='rulesService.bulkSend.next("approved")'>Send for Approve</button>
         <button class="kr-sg-button-danger btn_lg" (click)='rulesService.bulkDelete.next()'>Delete</button>
       </div>
     </section>       
