left menu text update

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -54,14 +54,14 @@
 					<img src="assets/icons/sidemenu/new-icons/index.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/index-active.svg" class="activeIcon">			
 				</span>
-				<span class="linkTitle">Index</span>
+				<span class="linkTitle">Index Pipeline</span>
 			</div>
 			<div mat-button class="mat-button" [routerLink]="['/query']" skipLocationChange routerLinkActive="active" (click)="preview('query')" mat-button>			
 				<span class="inlineIconBox">	
 					<img src="assets/icons/sidemenu/new-icons/query.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/query-active.svg" class="activeIcon">			
 				</span>
-				<span class="linkTitle">Query</span>
+				<span class="linkTitle">Query Pipeline</span>
 			</div>
 			<div mat-button class="mat-button" [routerLink]="['/ml-threshold']" skipLocationChange routerLinkActive="active" (click)="preview('ml')" mat-button>
 				<span class="inlineIconBox leftAdjust">	
