--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -295,10 +295,10 @@
                   </div>
                 </div>
                 
-                <div class="site-map-url-sec">
+                <div *ngIf="selectedSource.sitemaps"  class="site-map-url-sec">
                   <div class="label_text">Sitemap URLS</div>
                     <div class="urls_">
-                      <div class="site-url">https://finshots.in /path/sample</div>
+                      <!-- <div class="site-url" *ngFor ="let site of selectedSource.sitemaps">{{site}}</div> -->
                       <div class="site-url">https://finshots.in /path/sample</div>
                     </div>
                 </div>     
@@ -306,8 +306,12 @@
                     <div class="row m-0 row_data">
                       <div class="col-10 title pl-pr-10">Schedule</div>
                       <div class="toggle-label col-2 pl-pr-10 text-right">
-                        <label class="kr-sg-toggle">
-                          <input type="checkbox">
+                        <label *ngIf="selectedSource.advanceSettings" class="kr-sg-toggle" >
+                          <input type="checkbox" [checked] = "selectedSource.advanceSettings.scheduleOpts">
+                          <div class="slider"></div>
+                        </label>
+                        <label *ngIf="!selectedSource.advanceSettings" class="kr-sg-toggle">
+                          <input type="checkbox" >
                           <div class="slider"></div>
                         </label>
                       </div>
@@ -315,8 +319,12 @@
                     <div class="row m-0 row_data">
                       <div class="col-10 title pl-pr-10">Crawl Everything</div>
                       <div class="toggle-label col-2 pl-pr-10 text-right">
-                        <label class="kr-sg-toggle">
-                          <input type="checkbox">
+                        <label *ngIf="selectedSource.advanceSettings" class="kr-sg-toggle" >
+                          <input type="checkbox" [checked] = "selectedSource.advanceSettings.crawlEverything">
+                          <div class="slider"></div>
+                        </label>
+                        <label *ngIf="!selectedSource.advanceSettings" class="kr-sg-toggle" >
+                          <input type="checkbox" >
                           <div class="slider"></div>
                         </label>
                       </div>
@@ -328,11 +336,11 @@
                     <div class="col-10 p-0 d-flex align-items-center">
                       <div class="kr-sg-dropdowns">
                         <div class="dropdown dropdown-open">
-                            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">Enter/Path</button>                                            
+                            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">Contains</button>                                            
                             <ul class="dropdown-menu content-menu">                                               
-                              <li><a>Option 1</a></li>
-                              <li><a>Option 2</a></li>
-                              <li><a>Option 3</a></li>
+                              <li><a>Contains</a></li>
+                              <!-- <li><a>Option 2</a></li>
+                              <li><a>Option 3</a></li> -->
                             </ul>
                           </div>
                       </div>
@@ -342,14 +350,17 @@
                       <div class="add-urls"><img src="assets/icons/add-urls.svg"></div>
                     </div>
                   </div>
-                  <div class="path-data row m-0">
+                  <div *ngIf="selectedSource.advanceSettings">
+                    <div *ngFor ="let allow of selectedSource.advanceSettings.allowedURLs;let i = index"class="path-data row m-0">
+                      <div class="col-11 p-0 title">{{(i+1)}} : {{allow.Contains || 'contains'}} - {{allow.url}}</div>
+                      <div class="close-path col-1 p-0 text-right" (click)="deleteRecord()"><img src="assets/images/close-cross.svg"></div>
+                    </div>
+                  </div >
+                  
+                  <!-- <div class="path-data row m-0">
                     <div class="col-11 p-0 title">1. Contains / archive</div>
                     <div class="close-path col-1 p-0 text-right"><img src="assets/images/close-cross.svg"></div>
-                  </div>
-                  <div class="path-data row m-0">
-                    <div class="col-11 p-0 title">1. Contains / archive</div>
-                    <div class="close-path col-1 p-0 text-right"><img src="assets/images/close-cross.svg"></div>
-                  </div>
+                  </div> -->
                 </div>
 
                 <!-- Conf Configuration-->
