Custom upload and left menu labels update

--- a/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
+++ b/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
@@ -74,7 +74,7 @@
         <h2 class="subSection">NLP Settings</h2>
         <div class="sliderContainer">
             <div class="label">Embeddings</div>
-            <div class="info">On Selection of Custom we should show a browse button to upload</div>
+            <div class="info">Embeddings map the words or phrases from the vocabulary are into vectors of real numbers</div>
             <div class="kr-sg-radiobutton">
                 <input id="NER1" type="radio" value="true" name="NERRadio"
                     class="radio-custom" checked>
@@ -94,6 +94,10 @@
                 <input id="NER4" type="radio" value="false" name="NERRadio"
                     class="radio-custom">
                 <label for="NER4" class="radio-custom-label">Custom</label>
+            </div>
+            <div class="customUpload">
+                <input type="file">
+                <button>Upload</button>
             </div>
         </div>
         <div class="sliderContainer">
@@ -135,7 +139,7 @@
         </div>        
         <div class="sliderContainer">
             <div class="label">Embeddings</div>
-            <div class="info">On Selection of Custom we should show a browse button to upload</div>
+            <div class="info">Embeddings map the words or phrases from the vocabulary are into vectors of real numbers</div>
             <div class="kr-sg-radiobutton">
                 <input id="NER11" type="radio" value="true" name="NERRadio1"
                     class="radio-custom" checked>
@@ -155,6 +159,10 @@
                 <input id="NER21" type="radio" value="false" name="NERRadio1"
                     class="radio-custom">
                 <label for="NER21" class="radio-custom-label">Custom</label>
+            </div>
+            <div class="customUpload">
+                <input type="file">
+                <button>Upload</button>
             </div>
         </div>  
         <div class="sliderContainer">
