--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -686,8 +686,8 @@
     .botContainer{
         font-family: 'Inter', sans-serif !important;
         .bot-box{
-            width: 225px;
-                height: 225px;
+            width: 313px;
+            height: 120px;
                 background: #FFFFFF;
                 border: 1px solid #BDC1C6;
                 box-sizing: border-box;
@@ -702,16 +702,19 @@
                    // display: none;
                 }
             .title-bot{
-            
-                color: #202124;
-                font-weight: 500;
-                font-size: 16px;
-                margin-bottom: 24px;
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
-                margin-top: 15%;
-                margin-bottom: 5%;
+                margin-top: 20px;
+                // color: #202124;
+                // font-weight: 500;
+                // font-size: 16px;
+                // margin-bottom: 24px;
+                // overflow: hidden;
+                // white-space: nowrap;
+                // text-overflow: ellipsis;
+                // margin-top: 15%;
+                // margin-bottom: 5%;
             }
             .title-bot-desc{
                 color: #9AA0A6;
