--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -345,15 +345,15 @@
                           </div>
                       </div>
                       <div class="kr-sg-input-text">                      
-                        <input type="text" placeholder="Enter/Path" class="input-text" autocomplete="off">                        
+                        <input type="text" #inputVal placeholder="Enter/Path" class="input-text" autocomplete="off">                        
                       </div>
-                      <div class="add-urls"><img src="assets/icons/add-urls.svg"></div>
+                      <div class="add-urls" (click)="allowUrls('contains',inputVal)"><img src="assets/icons/add-urls.svg" ></div>
                     </div>
                   </div>
                   <div *ngIf="selectedSource.advanceSettings">
                     <div *ngFor ="let allow of selectedSource.advanceSettings.allowedURLs;let i = index"class="path-data row m1010">
                       <div class="col-11 p-0 title ">{{(i+1)}} : {{allow.Contains || 'contains'}} - {{allow.url}}</div>
-                      <div class="close-path col-1 p-0 text-right" (click)="deleteRecord()"><img src="assets/images/close-cross.svg"></div>
+                      <div class="close-path col-1 p-0 text-right" (click)="updateRecord(i,allow,'delete')"><img src="assets/images/close-cross.svg"></div>
                     </div>
                   </div >
                   
