bot actions empty screen height alignements fixed

--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -4,7 +4,7 @@
       <span class="please-wait-message">Please Wait!</span>
     </div>
     <div class="noTraits" *ngIf="!(bots && bots.length) && !loadingContent">
-      <img src="assets/images/empty-illustration.png">
+      <img class="noTraitsImg" src="assets/images/empty-illustration.png">
        <div class='noTraitsInfo'>
          <!--<span class='infoHeader'></span> -->
         <p class='infoP'>No actions available<br>
