--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -345,7 +345,7 @@
                           </div>
                       </div>
                       <div class="kr-sg-input-text">                      
-                        <input type="text" #inputVal placeholder="Enter/Path" class="input-text" autocomplete="off">                        
+                        <input type="text" id = "enterPathInput" #inputVal placeholder="Enter/Path" class="input-text" autocomplete="off">                        
                       </div>
                       <div class="add-urls" (click)="allowUrls('contains',inputVal)"><img src="assets/icons/add-urls.svg" ></div>
                     </div>
