--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -37,7 +37,6 @@
                     <label for="radio-7" class="radio-custom-label">Hunspell</label>
                 </div>   
         </div>
-
         <div class="toggleContainer">
             <div class="label">Case Sesitivity</div>
             <div class="info">Retain the case or convert to lowercase before querying</div>
@@ -103,7 +102,14 @@
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
                 </label>
         </div>
-  
+        <div class="toggleContainer">
+            <div class="label">Typo Tolerance</div>
+            <div class="info">Allows typo tolerance of upto 2 characters for words of length higher than 5</div>
+                <label class="kr-sg-toggle with-label">
+                    <input type="checkbox" checked>
+                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
+                </label>
+        </div>
        
     </perfect-scrollbar>
 </div>
