--- a/findly-builder/src/app/components/query/query.component.html
+++ b/findly-builder/src/app/components/query/query.component.html
@@ -41,7 +41,6 @@
                     <label for="Stemmer-7" class="radio-custom-label">Hunspell</label>
                 </div>   
         </div>
-
         <div class="toggleContainer">
             <div class="label">Case Sesitivity</div>
             <div class="info">Retain the case or convert to lowercase before querying</div>
@@ -102,6 +101,22 @@
         <div class="toggleContainer">
             <div class="label">Emoticon Expansion</div>
             <div class="info">Automatically expands emoticons. Can be useful to understand sentiment. In some case acknowledgements like thank you, "done" etc.</div>
+                <label class="kr-sg-toggle with-label">
+                    <input type="checkbox" checked>
+                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
+                </label>
+        </div>
+        <div class="toggleContainer">
+            <div class="label">Spell correction</div>
+            <div class="info">Enabling this will Spell Correct the user input to the nearest valid term in the current language</div>
+                <label class="kr-sg-toggle with-label">
+                    <input type="checkbox" checked>
+                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
+                </label>
+        </div>
+        <div class="toggleContainer">
+            <div class="label">Highlighting</div>
+            <div class="info">Helps in Highlighting the words or phrases in the Page response which matched the user input</div>
                 <label class="kr-sg-toggle with-label">
                     <input type="checkbox" checked>
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
