--- a/findly-builder/src/app/components/ml-threshold/ml-threshold.component.scss
+++ b/findly-builder/src/app/components/ml-threshold/ml-threshold.component.scss
@@ -72,7 +72,7 @@
                 border-radius: 5px;
                 margin-top: 15px;
                 text-align: center;
-                display: none;
+                // display: none;
                 input{
                     opacity: 0;
                     position: absolute;
