removed unnessary width

--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -560,7 +560,7 @@ div.divBlockEmptylastChild:first-child {
             }
         }
         .kr-sg-dropdowns{
-            width: 124px;
+            width: auto;
             margin-left: 15px;
             .dropdown-open{
                 &.show{
